<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ItemizedActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textTitleInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintEnd_toStartOf="@+id/addReceiptImageButton"
        app:layout_constraintStart_toStartOf="@+id/leftGuideline"
        app:layout_constraintTop_toTopOf="@+id/addReceiptImageButton">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/receiptTitleEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/item_title_hint" />
    </com.google.android.material.textfield.TextInputLayout>

    <ImageButton
        android:id="@+id/addReceiptImageButton"
        android:layout_width="62dp"
        android:layout_height="53dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/image_button_outline"
        android:padding="5dp"
        android:paddingBottom="10dp"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toStartOf="@+id/rightGuideline"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:srcCompat="@drawable/vector_add_photo_grey" />

    <Spinner
        android:id="@+id/dateSpinner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        app:layout_constraintEnd_toStartOf="@+id/rightGuideline"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/leftGuideline"
        app:layout_constraintTop_toBottomOf="@+id/textTitleInputLayout" />


    <View
        android:id="@+id/dateUnderline"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@color/harshGrey"
        app:layout_constraintEnd_toEndOf="@+id/dateSpinner"
        app:layout_constraintStart_toStartOf="@+id/dateSpinner"
        app:layout_constraintTop_toBottomOf="@+id/dateSpinner" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/leftGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/rightGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="395dp" />

    <TextView
        android:id="@+id/dateHintText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/item_date_hint"
        app:layout_constraintBottom_toTopOf="@+id/dateSpinner"
        app:layout_constraintStart_toStartOf="@+id/leftGuideline" />

    <Spinner
        android:id="@+id/paidBySpinner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        app:layout_constraintEnd_toStartOf="@+id/rightGuideline"
        app:layout_constraintStart_toStartOf="@+id/leftGuideline"
        app:layout_constraintTop_toBottomOf="@+id/dateSpinner" />

    <View
        android:id="@+id/paidByUnderline"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@color/harshGrey"
        app:layout_constraintEnd_toEndOf="@+id/paidBySpinner"
        app:layout_constraintStart_toStartOf="@+id/paidBySpinner"
        app:layout_constraintTop_toBottomOf="@+id/paidBySpinner" />

    <TextView
        android:id="@+id/paidByHintText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/item_paidby_hint"
        app:layout_constraintBottom_toTopOf="@+id/paidBySpinner"
        app:layout_constraintStart_toStartOf="@+id/leftGuideline" />

    <View
        android:id="@+id/forWhomViewBakground"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="32dp"
        android:background="@color/backgroundGrey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/paidBySpinner" />

    <TextView
        android:id="@+id/forWhomText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/item_forwhome_hint"
        app:layout_constraintBottom_toBottomOf="@+id/forWhomViewBakground"
        app:layout_constraintStart_toStartOf="@+id/leftGuideline"
        app:layout_constraintTop_toTopOf="@+id/forWhomViewBakground" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/itemisedRecyclerView"
        android:layout_width="409dp"
        android:layout_height="253dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forWhomViewBakground" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/next"
        android:onClick="addNewItemizedReceiptButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/rightGuideline"
        app:layout_constraintStart_toStartOf="@+id/leftGuideline" />
</androidx.constraintlayout.widget.ConstraintLayout>