<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".GroupScreenActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView19"
        style="@style/grandTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView5" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="76dp"
        android:layout_height="118dp"
        android:layout_marginTop="200dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/groupRecy"
        app:srcCompat="@drawable/easy_split_logo" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/groupRecy"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintVertical_bias="0.0">

    </androidx.recyclerview.widget.RecyclerView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/addNewGroupFloatBut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="60dp"
        android:backgroundTint="@android:color/white"
        android:clickable="true"
        android:onClick="addNewGroupButton"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/orginalFloatingButton"
        app:layout_constraintEnd_toEndOf="@+id/orginalFloatingButton"
        app:srcCompat="@drawable/ic_add_black_24dp"
        tools:visibility="visible" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/joinNewGroupFloatBut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="60dp"
        android:backgroundTint="@android:color/white"
        android:clickable="true"
        android:onClick="joinNewGroupButton"
        android:visibility="invisible"
        app:layout_constraintEnd_toStartOf="@+id/orginalFloatingButton"
        app:layout_constraintTop_toBottomOf="@+id/addNewGroupFloatBut"
        app:srcCompat="@drawable/vector_person_green"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/textView16"
        style="@style/grandTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/groups"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/orginalFloatingButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:backgroundTint="@android:color/white"
        android:clickable="true"
        android:onClick="originalFloatingButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_add_black_24dp" />

    <TextView
        android:id="@+id/newGroupHint"
        style="@style/standardWhiteText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/create_new_group"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="@+id/addNewGroupFloatBut"
        app:layout_constraintStart_toStartOf="@+id/addNewGroupFloatBut"
        app:layout_constraintTop_toBottomOf="@+id/addNewGroupFloatBut" />

    <TextView
        android:id="@+id/joinGroupHint"
        style="@style/standardWhiteText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/join_new_group"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="@+id/joinNewGroupFloatBut"
        app:layout_constraintStart_toStartOf="@+id/joinNewGroupFloatBut"
        app:layout_constraintTop_toBottomOf="@+id/joinNewGroupFloatBut" />

</androidx.constraintlayout.widget.ConstraintLayout>